C/WS_juautrmar_Pract01/.metadata/.plugins/org.eclipse.cdt.ui/Practica02.build.log
20:00:47 **** Incremental Build of configuration Debug for project Practica02 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "Codigo\\equisuma.o" "..\\Codigo\\equisuma.c" 
..\Codigo\equisuma.c:8:25: error: expected ';', ',' or ')' before 'matriz'
 int equisuma(int [] [3] matriz, int i, int j, int tamano){
                         ^

20:00:50 Build Finished (took 2s.873ms)

